fix(css): align with figma

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ p {
   width: 340px;
   border-radius: 8px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.06);
-  padding: 24px;
+  padding: 23px;
 }
 
 /* --- Row and Col --- */
